# cat-annihilation

./: .clangd  .cursorrules  .gitignore  AGENT_DEPLOYMENT.md  ARCHITECTURE.md  BUILD.md  BUILD_VALIDATION_README.md  CLAUDE.md  CMakeLists.txt  DEVELOPMENT_PLAN.md  ELEMENTAL_MAGIC_SYSTEM.md  ENGINE_BACKLOG.md  ENGINE_PLAN.md  ENGINE_PROGRESS.md  ISSUES.md  Makefile.check  README.md  STORY_MODE_DESIGN.md  TESTING_INFRASTRUCTURE.md  VALIDATION_SUMMARY.txt  VALIDATION_SYSTEM.md  config.json  eslint.config.mjs  index.html  package.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml
assets/audio/: generate_audio.py
assets/config/: cat_presets.json  config.json  default_settings.json  items.json  mobile_layouts.json
assets/dialogs/: clan_leader_welcome_ember.json  clan_leader_welcome_frost.json  clan_leader_welcome_mist.json  clan_leader_welcome_storm.json  elder_wisdom.json  healer_general.json  mentor_intro_ember.json  mentor_intro_frost.json  mentor_intro_mist.json  mentor_intro_storm.json  merchant_general.json  scout_briefing.json  trainer_general.json  wanderer_intro.json
assets/fonts/: README.md
assets/models/: cat.gltf  dog.gltf  projectile_arrow.gltf  projectile_spell.gltf  rock.gltf  sword.gltf  tree_oak.gltf  tree_pine.gltf
assets/npcs/: npcs.json
assets/quests/: quests.json
assets/textures/: generate_textures.py
build_stubs/: cuda_stubs.h  glfw_stubs.h  openal_stubs.h  vulkan_stubs.h
docs/parity/: 01-forest-environment.md
engine/ai/: AISystem.cpp  AISystem.hpp  BTNode.hpp  BehaviorTree.cpp  BehaviorTree.hpp  Blackboard.cpp  Blackboard.hpp  Example.cpp  Navigation.cpp  Navigation.hpp  README.md  SUMMARY.txt
engine/animation/: Animation.cpp  Animation.hpp  AnimationBlend.cpp  AnimationBlend.hpp  Animator.cpp  Animator.hpp  RootMotion.hpp  Skeleton.cpp  Skeleton.hpp  TwoBoneIK.hpp
engine/assets/: AssetLoader.cpp  AssetLoader.hpp  AssetManager.cpp  AssetManager.hpp  Base64DataUri.hpp  ModelLoader.cpp  ModelLoader.hpp  TextureLoader.cpp  TextureLoader.hpp
engine/audio/: AudioBuffer.cpp  AudioBuffer.hpp  AudioEngine.cpp  AudioEngine.hpp  AudioListener.cpp  AudioListener.hpp  AudioMixer.cpp  AudioMixer.hpp  AudioSource.cpp  AudioSource.hpp
engine/containers/: DynamicArray.hpp  HashMap.hpp  RingBuffer.hpp  SlotMap.hpp  SparseSet.hpp
engine/core/: CONFIG_README.md  CONFIG_SUMMARY.md  Config.cpp  Config.hpp  Input.cpp  Input.hpp  Logger.cpp  Logger.hpp  Makefile  Platform.hpp  SAVE_SYSTEM_README.md  SAVE_SYSTEM_SUMMARY.md  Timer.cpp  Timer.hpp  Types.hpp  Window.cpp  Window.hpp  config_example.cpp  config_test.cpp  engine_integration_example.cpp  game_config.json  game_config_modified.json  save_system.cpp  save_system.hpp  save_system_example.cpp  serialization.cpp  serialization.hpp  settings_manager.cpp  settings_manager.hpp  touch_input.cpp  touch_input.hpp
engine/cuda/: .clang-format  API_OVERVIEW.md  CMakeLists.txt  CudaBuffer.hpp  CudaContext.cpp  CudaContext.hpp  CudaError.hpp  CudaStream.cpp  CudaStream.hpp  README.md  example.cpp
engine/cuda/particles/: API_OVERVIEW.md  CMakeLists.txt  ParticleEmitter.hpp  ParticleKernels.cu  ParticleKernels.cuh  ParticleSystem.cpp  ParticleSystem.cu  ParticleSystem.hpp  README.md  RibbonTrail.hpp  RibbonTrailDevice.cuh  SimplexNoise.hpp  elemental_particles.cu  elemental_particles.cuh  example.cpp
engine/cuda/physics/: CCD.hpp  CCDPrepass.hpp  Collider.cpp  Collider.hpp  Integration.cu  Integration.cuh  NarrowPhase.cu  NarrowPhase.cuh  PhysicsWorld.cpp  PhysicsWorld.cu  PhysicsWorld.hpp  RigidBody.hpp  SequentialImpulse.hpp  SpatialHash.cu  SpatialHash.cuh
engine/debug/: Profiler.cpp  Profiler.hpp  ProfilerOverlay.cpp  ProfilerOverlay.hpp
engine/ecs/: Component.hpp  ComponentPool.cpp  ComponentPool.hpp  ECS.hpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  Query.hpp  System.hpp  SystemManager.cpp  SystemManager.hpp
engine/jobs/: CMakeLists.txt  Job.hpp  JobQueue.hpp  JobSystem.cpp  JobSystem.hpp  README.md  WorkerThread.cpp  WorkerThread.hpp  example_usage.cpp
engine/math/: AABB.hpp  Frustum.hpp  IMPLEMENTATION_NOTES.md  Math.hpp  Matrix.hpp  (+8 more)
engine/scene/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  SceneNode.cpp  SceneNode.hpp  SceneSerializer.cpp  SceneSerializer.hpp  example_usage.cpp
game/: CatAnnihilation.cpp  CatAnnihilation.hpp  ENEMY_SYSTEM_README.md  game_events.hpp  main.cpp
scripts/: asset_browser.html  check_compilation.py  check_includes.py  full_validation.sh  game-agent.ps1  identify_cats.html  regen_cat_dog_models.ts  render_cat.py  rig_batch.ps1  rig_quadruped.py  run_tests.sh  test_animations.ts  test_per_cat_anim.ts  test_rigged_cats.ts  translate_compile_commands.ts  validate_code.sh  validate_json.py  validate_shaders.py
shaders/: IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  SHADER_INDEX.md  compile_shaders.sh
src/: App.tsx  index.tsx
tests/: CMakeLists.txt  README.md  test_main.cpp
tests/golden/: smoke.ppm
tests/integration/: test_event_system.cpp  test_game_flow.cpp  test_golden_image.cpp  test_paths.hpp.in  test_system_integration.cpp
tests/mocks/: mock_cat_entity.cpp  mock_cuda.hpp  mock_ecs.cpp  mock_ecs.hpp  mock_particle_system.cpp  mock_renderer.cpp  mock_renderer.hpp  mock_vulkan.hpp
tests/unit/: test_base64_data_uri.cpp  test_cat_customization.cpp  test_ccd.cpp  test_ccd_prepass.cpp  test_combat_system.cpp  test_combo_system.cpp  test_day_night.cpp  test_dialog_system.cpp  test_elemental_magic.cpp  test_graphics_settings_panel.cpp  test_image_compare.cpp  test_leveling_system.cpp  test_mesh_optimizer.cpp  test_npc_system.cpp  test_oit_weight.cpp  test_profiler_overlay.cpp  test_quest_system.cpp  test_ribbon_trail.cpp  test_root_motion.cpp  test_sequential_impulse.cpp  test_serialization.cpp  test_shader_hot_reload.cpp  test_shader_hot_reload_driver.cpp  test_shader_reload_registry.cpp  test_shadow_atlas_packer.cpp  test_simplex_noise.cpp  test_status_effects.cpp  test_story_mode.cpp  test_two_bone_ik.cpp
(+403 files in other folders)
